--- a/README.asciidoc
+++ b/README.asciidoc
@@ -11,15 +11,15 @@ News
 6 Feb 2013
 
 - New `testing' feature for distributed environments only. Lots of bug fixes.
-- Commands will need modifying: see the <<X10, Upgrade>> section below. 
+- Commands will need modifying: see the `Upgrade' section below. 
 
-14 Jan 2013 - New release with lots of enhancements and fixes. Packaging has changed: See <<X11, Install>>.
+14 Jan 2013 - New release with lots of enhancements and fixes. Packaging has changed: See `Install'.
 
 7 Nov 2012 - All nagios object definitions are now supported in the REST api.
 
 22 Oct 2012 - Fixes made for Centos 5/6 and Debian packages.
 
-4 Sep 2012 - Added more Nagios directives to the REST api. See the <<X10, Upgrade>> section below. 
+4 Sep 2012 - Added more Nagios directives to the REST api. See the `Upgrade' section below. 
 
 21 Jul 2012 - http://blogger.smorg.co.uk/2012/07/nagrestconf-on-raspberry-pi.html[Nagrestconf on Raspberry PI]
 
@@ -109,8 +109,6 @@ including Maemo, IPAD and Android versions.
 | procmail | for locking with 'lockfile'.
 |===========================================================================================================
 
-[[X10]]
-
 Upgrade
 -------
 
@@ -134,8 +132,6 @@ But from 1.144 onwards it should be:
 /usr/bin/printf "%b" "***** Nagios *****\n\nNotification Type: $NOTIFICATIO...
 ----
 
-
-[[X11]]
 
 Install
 -------
