--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.146) UNRELEASED; urgency=low
+
+  * Enhancements and Bugfixes.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 14 Jan 2013 09:40:00 +0000
+
 nagrestconf (1.0.11) UNRELEASED; urgency=low
 
   * Enhancements and Bugfixes.
