--- a/README.asciidoc
+++ b/README.asciidoc
@@ -85,8 +85,8 @@ distributed setup.
 https://github.com/sni/mod_gearman#distributed-setup-with-remote-scheduler[Distributed
 Setup With Remote Scheduler], `Testing mode' becomes possible. Testing mode is
 where some service checks are only visible on the slave worker. When testing is
-complete, testing-mode can be turned off and the check will appear in the
-master nagios.
+complete, testing-mode can be turned off for that service check and the check
+will appear in the master nagios.
 * A new concept, service-sets, is introduced. This is where a number of
 services are defined, and later this definition can be used when creating new
 hosts. This allows new servers to be added to monitoring using a single REST
