--- a/README.asciidoc
+++ b/README.asciidoc
@@ -74,14 +74,16 @@ It can be useful for:
 Features
 --------
 
-* Supports distributed monitoring:
+* Supports distributed monitoring with mod_gearman.
 ** Supports all mod_gearman
 https://github.com/sni/mod_gearman#common-scenarios[Common Scenarios]
 including the advanced
 distributed setup.
 ** When using the mod_gearman scenario
 https://github.com/sni/mod_gearman#distributed-setup-with-remote-scheduler[Distributed
-Setup With Remote Scheduler], `Testing mode' becomes possible. Testing mode is
+Setup With Remote Scheduler], 
+*** Nagrestconf provides the `configuration sync' component.
+*** `Testing mode' becomes possible. Testing mode is
 where some service checks are only visible on the slave worker. When testing is
 complete, testing-mode can be turned off for that service check and the check
 will appear in the master nagios.
