--- a/README.asciidoc
+++ b/README.asciidoc
@@ -74,26 +74,26 @@ It can be useful for:
 Features
 --------
 
-* Supports distributed monitoring with mod_gearman.
-** Supports all mod_gearman
+. Supports distributed monitoring with mod_gearman.
+* Supports all mod_gearman
 https://github.com/sni/mod_gearman#common-scenarios[Common Scenarios]
 including the advanced
 distributed setup.
-** When using the mod_gearman scenario
+* When using the mod_gearman scenario
 https://github.com/sni/mod_gearman#distributed-setup-with-remote-scheduler[Distributed
 Setup With Remote Scheduler], 
-*** Nagrestconf provides the `configuration sync' component.
-*** `Testing mode' becomes possible. Testing mode is
+** Nagrestconf provides the `configuration sync' component.
+** `Testing mode' becomes possible. Testing mode is
 where some service checks are only visible on the slave worker. When testing is
 complete, testing-mode can be turned off for that service check and the check
 will appear in the master nagios.
-* A new concept, service-sets, is introduced. This is where a number of
+. A new concept, service-sets, is introduced. This is where a number of
 services are defined, and later this definition can be used when creating new
 hosts. This allows new servers to be added to monitoring using a single REST
 command.
-* Many things can be disabled:
-** Service checks can be temporarily disabled.
-** Entire servers can be temporarily disabled.
+. Many things can be disabled:
+* Service checks can be temporarily disabled.
+* Entire servers can be temporarily disabled.
 * Configurations are versioned using subversion.
 * Ability to revert to the last-known-good configuration.
 
