--- a/README.asciidoc
+++ b/README.asciidoc
@@ -131,7 +131,7 @@ Requirements
 ------------
 
 For the Web GUI the following Browsers work: Firefox, Opera, Chrome, Safari.
-The Web GUI also works on Maemo, IPAD and Android.
+The Web GUI also works on Maemo, iPad and Android.
 
 [cols="<,<",frame="topbot",options="header,autowidth"]
 |===========================================================================================================
