--- a/README.asciidoc
+++ b/README.asciidoc
@@ -107,8 +107,8 @@ nagios configuration will be created by csv2nag. All the real checks are done
 here and any errors are passed back to `rest/index.php'.
 
 One REST call, `apply/nagiosconfig', runs the csv2nag script. The only purpose
-of this script is to read a bunch of comma delimited files and write a valid
-nagios configuration. `Csv2nag' does not check for a valid nagios
+of this script is to read the comma delimited files moade by `nagctl' and write
+the nagios configuration. `Csv2nag' does not check for a valid nagios
 configuration since that is done by `nagctl'.
 
 *The configuration GUI*
