--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.147) UNRELEASED; urgency=low
+
+  * Fix for multiple restarter scripts running on master nagios.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 10 Apr 2013 15:05:00 +0000
+
 nagrestconf (1.146) UNRELEASED; urgency=low
 
   * Enhancements and Bugfixes.
