--- a/README.asciidoc
+++ b/README.asciidoc
@@ -118,7 +118,12 @@ hence can be run on a different machine if required.
 
 *Configuration Synchronisation*
 
-Nagios configurations are stored on each worker and synchronised 'up' to the Nagios Master.
+Nagios configurations are stored on each worker and synchronised `up' to the Nagios master.
+When the Nagios master notices that a subversion repository has changed it will remake the
+nagios configuration files for that environment. Many of the configuration items will be
+`mangled' to stop name collisions. However, note that host names are _not_ `mangled'. It
+is a requirement that host names are unique accross all Nagios workers. This should be
+enforced through naming convention - using full DNS names as host names is recommended.
 
 If a configuration needs to be rolled back then it must be done on the nagios slave worker
 from the command line and applied, then the configuration will be subversion mirrored 'up'.
