--- a/README.asciidoc
+++ b/README.asciidoc
@@ -835,7 +835,7 @@ Show only the name of all 'servicesets':
   | sed -n 's/\[[0-9]\+,0,.*][[:space:]]*["]*\([^"]*\).*/\1/p' \
   | sort -u
 
-Change a service attribute for every serviceset:
+Change a serviceset attribute for every serviceset:
 
 ----
  # Create a list of 'servicesets'
